...

  @override
  Widget build(BuildContext context) {
    return Observer(builder: (_) =>
        Scaffold(
          floatingActionButton: FloatingActionButton(
              key: const Key("btAdd"),
              backgroundColor: const Color(0xFF00225b),
              onPressed: () => Modular.to.pushNamed("add_list").whenComplete(() => store.getStream()),
              child: const Icon(Icons.add)),
          appBar: AppBar(
            backgroundColor: const Color(0xFF00225b),
            title: const Text("Minhas Listas",style: TextStyle(color: Colors.white,fontFamily: "PlayFair"))),
...
